crates/gridwell-writer-latex/tests/snapshots/snapshots__typed-values.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{lrl}
\toprule
Name & Score & Active \\
\midrule
Alice & 90 & yes \\
Bob & 85 & no \\
\bottomrule
\end{tabular}
