crates/gridwell-writer-latex/tests/snapshots/snapshots__unicode-emoji.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Mood & Icon \\
\midrule
happy & 😀 \\
party & 🎉🎊 \\
family & 👨‍👩‍👧‍👦 \\
\bottomrule
\end{tabular}
