crates/gridwell-writer-latex/tests/snapshots/snapshots__unicode-rtl.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
الاسم & القيمة \\
\midrule
مرحبا & ١٢٣ \\
שלום & 456 \\
\bottomrule
\end{tabular}
